2016-12-03
  new data (thanks to Tomáš Halenkovič, University of Pardubice, Czech Republic!)
    main/Al2O3/Boidin.yml
  new data  (thanks to Elisa Sani)
    organic/C2H6O - ethanol/Sani.yml
    organic/C2H6O - ethanol/Sani-formula.yml
    organic/C3H8O - propanol/Sani.yml
    organic/C3H8O - propanol/Sani-formula.yml
  new data (thanks to Vincent Vandalon, Eindhoven University of Technology, the Netherlands for contributing via GitHub!)
    main/MoO3/Vos.yml
    main/MoS2/Beal.yml
    main/MoS2/Yim-1.99um.yml
    main/MoS2/Yim-3.01um.yml
    main/MoS2/Yim-19.88um.yml
    main/MoS2/Zhang.yml
    main/MoSe2/Beal.yml
    main/MoTe2/Beal.yml
  new data (thanks to Konstantinos Moutzouris, Technological Educational Institute of Athens, Greece!)
    other/human body/liver/Giannios.yml
    other/human body/colon/Giannios-mucosa.yml
    other/human body/colon/Giannios-submucosa.yml
    other/human body/colon/Giannios-serosa.yml
  new data (thanks to Volodymyr Multian, Université de Savoie Mont Blanc, France, for providing data in yaml format! Thanks to Ryan Haislmaier and Venkatraman Gopalan, Pennsylvania State University, USA, for providing original data!)
    main/BiFeO3/Kumar.yml
  new data
    main/He/Cuthbertson.yml
    main/Ne/Cuthbertson.yml
    main/Ar/Cuthbertson.yml
    main/Kr/Cuthbertson.yml
    main/Xe/Cuthbertson.yml
    main/Ar/Peck-0C.yml
    main/Ar/Peck-15C.yml
    main/Ar/Larsen.yml
    main/Kr/Coch.yml
    main/Xe/Coch.yml
    main/CO2/Old.yml
    other/mixed gases/air/Peck.yml
    main/Ar/Sinnock*.yml (12 data sets for solid and liquid Ar at different temperatures)
    main/Kr/Sinnock*.yml (10 data sets for solid and liquid Kr at different temperatures)
    main/Xe/Sinnock*.yml (14 data sets for solid and liquid Xe at different temperatures)
  revised Hydrogen data (thanks to Donggyu Jang, Gwangju Institute of Science and Technology, South Korea!)
    -- main/H2/Leonard.yml
    ++ main/H2/Peck.yml
    ++ main/H2/Koch.yml
  modified (re-formatted) data