@@ -1,0 +1,14 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "S. Loria Über die Dispersion des Lichtes in gasförmigen Kohlenwasserstoffen. <a href=\"http://dx.doi.org/10.1002/andp.19093340809\"><i>Annalen der Physik</i> <b>334</b>, 605-622 (1909)</a> (in German).<br><sup>*</sup> Cauchy formula and experimental data presented in the paper don't match. Original data are re-fitted and the new formula is included in the database. See [<a href=\"http://refractiveindex.info/download/data/1909/Loria_1909-Ethane.pdf\">Figure</a>] for the comparison of the original data, the original fit and the new fit."
+COMMENTS: "Standard conditions. 0 °C, 760 torr (101.325 kPa)."
+DATA:
+  - type: formula 5
+    range: 0.5230 0.6677
+    coefficients: 1.0007330 6.822764e-6 -2
+INFO:
+    n_is_absolute: true
+    temperature: 0 °C
+    pressure: 101325 Pa
